<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>ch.vd.ses</groupId>
    <artifactId>demaut-wsclient</artifactId>
    <version>2.7.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>demaut-wsclient</name>

    <scm>
        <developerConnection>scm:git:git@bitbucket.etat-de-vaud.ch::/ses/demaut-wsclient</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <distributionManagement>
        <repository>
            <id>nexus-dgnsi-server</id> <!-- doit matcher l'id du server dans settings.xml -->
            <name>Nexus DGSNI</name>
            <url>${nexus.url.stable}</url>
        </repository>
        <snapshotRepository>
            <id>nexus-dgnsi-server</id>
            <name>Nexus DGSNI</name>
            <url>${nexus.url.snapshots}</url>
            <uniqueVersion>false</uniqueVersion>
        </snapshotRepository>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.fasterxml.jackson</groupId>
                <artifactId>jackson-core</artifactId>
                <version>2.15.3</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>2.15.3</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson</groupId>
                <artifactId>jackson-databin</artifactId>
                <version>2.15.3</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.dataformat</groupId>
                <artifactId>jackson-dataformat-xml</artifactId>
                <version>2.15.3</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.woodstox</groupId>
                <artifactId>woodstox-core</artifactId>
                <version>6.5.1</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <spring-boot.version>3.2.5</spring-boot.version>
        <lombok.version>1.18.32</lombok.version>
        <maven-release-plugin.version>3.0.1</maven-release-plugin.version>
        <demaut-jaxb.version>2.3.0</demaut-jaxb.version>
        <devsupport.version>3.7.0</devsupport.version>
        <surefire.argLine />
    </properties>

    <profiles>
        <profile>
            <id>dev</id>
            <properties>
                <surefire.argLine>-Dhttps.proxyHost=127.0.0.1 -Dhttps.proxyPort=9000 -Dhttp.nonProxyHosts=*.etat-de-vaud.ch|*.vd.ch</surefire.argLine>
            </properties>
        </profile>
        <profile>
            <id>not</id>
            <properties>
                <skipTests>true</skipTests>
            </properties>
        </profile>
    </profiles>

    <modules>
        <module>common</module>
        <module>antivirus</module>
        <module>bice</module>
        <module>editique</module>
        <module>ged</module>
        <module>happyexchange</module>
        <module>keymanager</module>
        <module>medreg</module>
        <module>psyreg</module>
        <module>refinf</module>
        <module>refsec</module>
        <module>nareg</module>
        <module>rcpers</module>
        <module>siti</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>${spring-boot.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.data</groupId>
            <artifactId>spring-data-commons</artifactId>
            <version>3.2.5</version>
        </dependency>
        <dependency>
            <groupId>ch.vd.ses</groupId>
            <artifactId>demaut-jaxb</artifactId>
            <version>${demaut-jaxb.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <version>${spring-boot.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jaxb</groupId>
            <artifactId>jaxb-runtime</artifactId>
            <version>4.0.4</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <release>21</release>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.2</version>
                <configuration>
                    <argLine>-XX:+EnableDynamicAgentLoading ${surefire.argLine}</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>${maven-release-plugin.version}</version>
                <configuration>
                    <goals>clean deploy</goals>
                    <tagNameFormat>@{project.version}</tagNameFormat>
                    <pushChanges>false</pushChanges>
                    <localCheckout>true</localCheckout>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <projectVersionPolicyId>SemVerVersionPolicy</projectVersionPolicyId>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals><goal>jar-no-fork</goal></goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
